更新 配置说明和项目说明

--- a/configs/env/.env-development
+++ b/configs/env/.env-development
@@ -1,28 +1,48 @@
+// 项目启动端口
 PORT=1111
+// 数据库名
 DATABASE=coupon
+// MongoDb 连接地址
 MONGODB_HOST=
+// MongoDb 连接端口
 MONGODB_PORT=
+// MongoDb 用户名
 MONGODB_USERNAME=
-MONGODB_PASSWORD=l
+// MongoDb 密码
+MONGODB_PASSWORD=
 
+// Redis 端口
 REDIS_PORT=6379
+// Redis 地址
 REDIS_HOST=127.0.0.1
+// Redis 密码
 REDIS_PASSWORD=
+// Redis 用户名
 REDIS_USERNAME=
 
-
+// 淘宝客API 开发者key 申请地址: https://open.taobao.com/
 TaoBaoAppkey=
+// 淘宝客API 开发者密钥 申请地址: https://open.taobao.com/
 TaoBaoAppsecret=
+// 淘宝客接口地址
 TaoBaoREST_URL=https://eco.taobao.com/router/rest
+// 推广位
 pid=
+//
 siteid=
 adzoneid=
+// 折淘客的 开发者key https://www.zhetaoke.com
 ztk_appkey=
+// 折淘客的 sid https://www.zhetaoke.com
 ztk_sid=
+// 折淘客的 账户 https://www.zhetaoke.com
 ztk_account=
+// 京东联盟id
 jd_unionId=
+// 京东联盟 开发者key
 jd_app_key=
 jd_app_secret=
+// 私有域 pid
 relation_pid=
 relation_siteid=
 relation_adzoneid=
